--- a/index.html
+++ b/index.html
@@ -1,37 +1,90 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Delivery food</title>
 </head>
+
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header-box">
-                <div class="header-logo logo">
-                    <img src="imgs/logo.png" alt="logo">
+    <div class="page-wrapper">
+        <header class="header">
+            <div class="container">
+                <div class="header-box">
+                    <div class="header-logo logo">
+                        <img src="imgs/logo.png" alt="logo">
+                    </div>
+                    <div class="header-controls">
+                        <button class="btn btn-primary">
+                            <img src="/delivery-project/imgs/items/user.png" alt="user">
+                            Войти
+                        </button>
+                        <button class="btn btn-outline">
+                            <img src="/delivery-project/imgs/items/shopping-cart.png" alt="cart">
+                            Корзина
+                        </button>
+                    </div>
                 </div>
-                <div class="header-controls">controls</div>
             </div>
-        </div>
-    </header>
-    <main class="main">
-        <div class="container">
-            container
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-box">
-                <div class="footer-logo logo">
-                    <img src="imgs/logo.png" alt="logo">
+        </header>
+        <main class="main">
+            <section class="banner">
+                <div class="container">
+                    <div class="banner-item">
+                        <h2 class="banner-item--title">
+                            Онлайн-сервис <br>доставки еды на дом
+                        </h2>
+                        <p class="banner-item--subtitle">
+                            Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком
+                        </p>
+                    </div>
                 </div>
-                <div class="footer-nav">2</div>
-                <div class="footer-social">3</div>
+            </section>
+            <section class="products">
+                <div class="container">
+                    <div class="products-header">
+                        <h3 class="products-header--title">
+                            Рестораны
+                        </h3>
+                        <input 
+                            type="text" 
+                            class="products-header--search"
+                            placeholder="Поиск блюд и ресторанов"
+                        >
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-box">
+                    <div class="footer-logo logo">
+                        <img src="imgs/logo.png" alt="logo">
+                    </div>
+                    <div class="footer-nav">
+                        <ul>
+                            <li>Ресторанам</li>
+                            <li>Курьерам</li>
+                            <li>Пресс-центр</li>
+                            <li>Контакты</li>
+                        </ul>
+                    </div>
+                    <div class="footer-social">
+                        <img src="imgs/social/insta.png" alt="">
+                        <img src="imgs/social/facebook.png" alt="">
+                        <img src="imgs/social/VK.png" alt="">
+                    </div>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
+
 </html>
