--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="/delivery-project/index.html" class="header-logo logo">
                         <img src="imgs/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button class="btn btn-primary">
                             <img src="/delivery-project/imgs/items/user.png" alt="user">
@@ -53,21 +53,248 @@
                         <h3 class="products-header--title">
                             Рестораны
                         </h3>
-                        <input 
-                            type="text" 
-                            class="products-header--search"
-                            placeholder="Поиск блюд и ресторанов"
-                        >
+                        <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов">
+                    </div>
+
+                    <div class="products-wrapper">
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="/delivery-project/imgs/rests/pizzaplus.jpg" alt="rest-1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card__image">
+                                <img src="/delivery-project/imgs/rests/rest-2.jpg" alt="rest-2">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card">
+                                <img src="/delivery-project/imgs/rests/rest-3.jpg" alt="rest-3">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card">
+                                <img src="/delivery-project/imgs/rests/rest-4.jpg" alt="rest-4">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card">
+                                <img src="/delivery-project/imgs/rests/rest-5.jpg" alt="rest-5">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
+                        <a href="/delivery-project/goods.html" class="products-card">
+                            <div class="products-card">
+                                <img src="/delivery-project/imgs/rests/rest-6.jpg" alt="rest-6">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description-info--raiting">
+                                            <img src="imgs/items/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description-info--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description-info--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="/delivery-project/goods.html" class="products-card">
                     </div>
                 </div>
             </section>
         </main>
+
+        <div class="card-modal__overlay">
+            <div class="card-modal">
+                <div class="card-modal__header">
+                    <h2 class="card-modal__header--title">
+                        Корзина
+                    </h2>
+                    <span class="card-modal__header--close">
+                        <img src="imgs/items/Group.svg" alt="">
+                    </span>
+                </div>
+
+
+
+                <div class="card-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+
+                            <button class="btn btn-outline">-</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">+</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="card-modal__footer">
+                    <div class="card-modal__footer--price">
+                        1250 ₽
+                    </div>
+                    <div class="card-modal__footer--controls">
+                        <button class="btn btn-primary">
+                            Оформить заказ
+                        </button>
+                        <button class="btn btn-outline">
+                            Отмена
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <footer class="footer">
             <div class="container">
                 <div class="footer-box">
-                    <div class="footer-logo logo">
+                    <a href="/delivery-project/index.html" class="footer-logo logo">
                         <img src="imgs/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="footer-nav">
                         <ul>
                             <li>Ресторанам</li>
