--- a/goods.html
+++ b/goods.html
@@ -9,7 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/delivery-project/css/style.css">
+    <script src="/delivery-project/script/index.js" defer></script>
     <title>Delivery food</title>
 </head>
 
@@ -26,7 +27,7 @@
                             <img src="/delivery-project/imgs/items/user.png" alt="user">
                             Войти
                         </button>
-                        <button class="btn btn-outline">
+                        <button class="btn btn-outline" id="cart-button">
                             <img src="/delivery-project/imgs/items/shopping-cart.png" alt="cart">
                             Корзина
                         </button>
@@ -36,7 +37,7 @@
         </header>
         <main class="main">
             <section class="products">
-                <div class="container">
+                <div class="container" id="goods-container">
 
                     <div class="products-wrapper">
                         <div class="products-card">
