--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/delivery-project/css/style.css">
+    <script src="/delivery-project/script/index.js" defer></script>
     <title>Delivery food</title>
 </head>
 
@@ -26,7 +27,7 @@
                             <img src="/delivery-project/imgs/items/user.png" alt="user">
                             Войти
                         </button>
-                        <button class="btn btn-outline">
+                        <button class="btn btn-outline" id="cart-button">
                             <img src="/delivery-project/imgs/items/shopping-cart.png" alt="cart">
                             Корзина
                         </button>
@@ -56,10 +57,10 @@
                         <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов">
                     </div>
 
-                    <div class="products-wrapper">
+                    <div class="products-wrapper" id="rests-container">
                         <a href="/delivery-project/goods.html" class="products-card">
                             <div class="products-card__image">
-                                <img src="/delivery-project/imgs/rests/pizzaplus.jpg" alt="rest-1">
+                                <img src="/delivery-project/imgs/rests/rest-1.jpg" alt="rest-1">
                             </div>
                             <div class="products-card__description">
                                 <div class="products-card__description-row">
@@ -211,7 +212,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="/delivery-project/goods.html" class="products-card">
+                        </a href="/delivery-project/goods.html" class="products-card">
                     </div>
                 </div>
             </section>
@@ -312,6 +313,8 @@
             </div>
         </footer>
     </div>
+
+    
 </body>
 
 </html>
